﻿- Add support for shelters (evacuation buses)


Version 1.3.3 -

- Change 'copy to all buildings of this type' behaviour to exact prefab match only


Version 1.3.2.2 -

- Fix helicopter depot support


Version 1.3.2.1 -

- Add extra check to prevent confusion between fishing boats and fish transport


Version 1.3.2 -

- Allow active Vehicle Selector settings to take priority over Transport Lines Manager for intercity passenger vehicles (if no vehicles are selected, the mod will continue to defer to TLM)
- Add checks for invalid data when saving


Version 1.3.1 -

- Improve trailer detection when collating vehicle lists
- Add check to ensure building panel doesn't overflow any screen boundary when opening
- Resolve conflict with Barges mod


Version 1.3 -

- Add support for private airports (aviation club)
- Defer to Transport Lines Manager for intercity passenger vehicles (passenger trains, buses, ships, aircraft) if TLM is present
- Ensure priority over NoBigTruck patches
- Add exception handling in case of corrupted Transfer Controller vehicle data


Version 1.2 -

- Add support for intercity trains
- Add support for cable cars
- Add support for bus-intercity bus hub
- Add support for vanilla airport and Industries DLC cargo airport
- Fix disaster helicopters being selectable as trucks (and vice-versa)
- Reposition Customize It Extended panel button for unique factories
- Add core translations


Version 1.1 -

- Add support for cargo and passenger harbors
- Add support for intercity buses (except for bus-intercity bus hub)
- Add support for snowplows
- Relocate conflicting Customize It Extended panel buttons
- Fix button on cemetaries being partially covered by an invisible background panel
- Fix park maintenance buildings having the title 'Road maintenance'
- Add race condition guard if the user opens the panel when holding down the paste or copy keys